smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/mixins-usage-in-explicit-1-0.smithy
// Syntax error at line 5, column 15: Mixins can only be used with Smithy version 2 or later. Attempted to use mixins with version `1.0`. | Model
$version: "1.0"
namespace smithy.example

structure Foo with [Bar] {}
